# openapi.yaml
@@ -77,12 +77,26 @@ paths:
         schema:
           type: string
           format: date
+      - name: performanceConcern
+        in: query
+        description: Performance concern
+        required: true
+        schema:
+          type: string
+          # add enums
+      - name: meatCondition
+        in: query
+        description: Meat Condition
+        required: true
+        schema:
+          type: string
+          # add enums
       - name: species
         in: query
         description: End date for the report
         required: true
         schema:
-          type: "array"
+          type: array
           items:
             $ref: "#/components/schemas/Species"
       responses:
@@ -150,7 +164,7 @@ components:
           type: "number"
           format: "float"
           nullable: true
-        averageHygieneScoreEstablishmentNat14Day:
+        averageHygieneScoreEstablishmentNational14Day:
           type: "number"
           format: "float"
           nullable: true
@@ -167,6 +181,18 @@ components:
           format: "int32"
           nullable: true
         average14DayNationalCountZeroToleranceDetectionEstablishment:
+          type: "number"
+          format: "float"
+          nullable: true
+        countZeroToleranceBreachEstablishment:
+          type: "number"
+          format: "int32"
+          nullable: true
+        countZeroToleranceBreachDepartment:
+          type: "number"
+          format: "int32"
+          nullable: true
+        average14DayNationalCountZeroToleranceBreachEstablishment:
           type: "number"
           format: "float"
           nullable: true
@@ -194,7 +220,9 @@ components:
           type: "integer"
           format: "int32"
         species:
-          $ref: "#/components/schemas/Species"
+          type: array
+          items:
+            $ref: "#/components/schemas/Species"
     Species:
       type: string
       enum:
